feat:[step3] 2등 보너스 적용 (#3738)
* feat:[step3] 2등 보너스볼 적용

* feat:[step3] 가독성을 위한 언더스코어 추가

* feat:[step3] Issued 키워드 제거, 인스턴스 번수 Private

* feat:[step3] 로또 길이, 범위 별 validation 추가

* feat:[step] testcode

* feat:[step3] revenue 제거 후 WinningStatic 역할로 변경

* feat:[step3] 당첨통계 출력시 Type 기준으로 출력하도록 로직 수정

* refact:[step3] ide 포맷팅 적용 / 불필요 클래스 삭제

* refact:[step3] assertThatIllegalArgumentException 적용

* refact:[step3] testcode 변수 초기화 수정

* refact:[step3] List<Integer>로 받던 로또 관련 전달 타입을 Lotto로 수정

* refact:[step3] 우승 번호를 나타내기위한 WinningLotto 클래스 추가

* refact:[step3] lotto 6자리 이상 magic number 제거, 7자리부터 validate

* fix:[step3] 45 자리 확인 로직에 버그 픽스 - 1~45를 표현하는 대상을 어떻게 더 분리할 수 있을까?